# EveDataBrowser

./: .dockerignore  .env.example  .gitignore  .prettierrc.json  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  plan.md  pyproject.toml  render.yaml  specify.md  tasks.md
.devcontainer/: devcontainer.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/api/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.smoke.config.ts
app/web/: .env.example  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.a11y.config.ts  vitest.config.ts  vitest.functional.config.ts
backend/: alembic.ini  requirements.txt
backend/contracts/: entities.json
backend/src/: main.py
backend/tests/: conftest.py  test_blueprints.py  test_health_smoke.py  test_market.py  test_rate_limiter.py  test_repository_blueprints.py  test_repository_market.py  test_repository_ships.py  test_search.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.ingestion  compose.yml
docker/entrypoints/: cron.sh
docs/: quickstart.md
docs/data/: market.md
docs/ui/: styleguide.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
ingestion/: __init__.py  requirements.txt
persistence/: index-roadmap.md
scripts/: dropdown-latency.mjs
(+237 files in other folders)
