[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.isort]
known-first-party = ["backend", "ingestion"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["backend", "ingestion"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "ingestion/tests"]
addopts = "-q"
